# gravidade-fortran

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Dockerfile  LOG.md  README.md  exemplo_leitura.f90  gerando.f90  main.f90  main.py  main_gerando.f90  repos.cmake  version.f90.in
arquivo/: arquivos.f90  leitura.f90  plot.f90
auxiliares/: analise.f90  angular.f90  auxiliares.f90  colisao.f90  correcao.f90  hamiltoniano.f90  strings.f90
calcs/: mecanica.f90
calcs/auxiliares/: analise.f90
calcs/condicionamento/: condicoesArtigo.f90
calcs/integracao/: rkf45.f90  rungekutta4.f90  verlet.f90
calcs/mecanica/: correcao.f90  hamiltoniano.f90
calcs/simulacao/: simulacao.f90  simulacao_sorteio.f90  simulacao_vi.f90
cmake/: FindJSONFortran.cmake  FindOpenBLAS.cmake
cmake/Modules/: FindOpenMP_Fortran.cmake
condicionamento/: condicoesArtigo.f90
exemplos/exibir/: lemniscata.csv
exemplos/sortear/: exemplo.json
exemplos/valores_iniciais/: exemplo.json
helpers/: build.sh  build_apptainer.sh  compilar_gerar.sh  docker.sh  exibir.sh  lemniscata.sh  limpar.sh  omp_threads.sh  rodar.sh  sortear_salvar.sh
img/: logo.html
integracao/: integrador.f90  rkf45.f90  rungekutta.f90  rungekutta4.f90  verlet.f90
libs/: gnufor.f90  python.f90
libs/json-fortran/: CMakeLists.txt  LICENSE  README.md
os/: linux.f90  windows.f90
presets/: exemplo1.txt  lemniscata.txt
presets/condicionar/: exemplo.json  exemplo.txt
presets/valores_iniciais/: 1000corpos_E_negativa.txt  1000corpos_E_nula.txt  1000corpos_E_positiva_1.txt  1000corpos_E_positiva_2.txt  100corpos_E_nula.txt  20corpos_E_nula.txt  3corpos_E_nula.txt  3corpos_E_positiva.txt  ex600.txt  exemplo_vi.json  iau25.txt  lemniscata.txt
python/: plot.py
pyutils/: densidade.py  ex_servidor.py
simulacao/: simulacao.f90  simulacao2.f90
src/: tipos.f90.in
src/arquivo/: arquivos.f90  arquivos_json.f90  arquivos_mod.f90  diretorio.f90  json_utils_mod.f90  leitura.f90  plot.f90  string_utils.f90
src/calcs/: auxiliares.f90  colisao.f90  correcao.f90  mecanica.f90
src/calcs/auxiliares/: auxiliares.f90
src/calcs/condicionamento/: condicionamento.f90  condicoesArtigo.f90  condicoesIniciais.f90  condicoes_iniciais.f90
src/calcs/forcas/: forcas.F90  forcas_md.F90  forcas_mi.F90  forcas_tree.F90
src/calcs/integracao/: CMakeLists.txt  euler.f90  euler_exp.f90  euler_imp.f90  eulersimp.f90  forcas.f90  forcas_mi.f90  integrador.F90  integrador.f90  integradores.f90.in  rkf45.f90  rungekutta.f90  rungekutta4.f90  ruth3.f90  ruth4.f90  verlet.f90
src/calcs/integracao/euler/: euler_exp.f90  euler_imp.f90
src/calcs/integracao/multipasso/ab/: ab2.f90  ab3.f90  ab4.f90  ab5.f90
src/calcs/integracao/rk/: rkf45.f90  rungekutta.f90  rungekutta2.f90  rungekutta3.f90  rungekutta4.f90
src/calcs/integracao/simpleticos/: euler_simp.f90  eulersimp.f90  verlet.f90
src/calcs/integracao/simpleticos/ec/: ecp4s5.f90  ecp4s6.f90
src/calcs/integracao/simpleticos/rkn/: rkn551.f90  rkn552.f90  rkn671.f90
src/calcs/integracao/simpleticos/ruth/: ruth3.f90  ruth4.f90
src/calcs/integracao/simpleticos/svc/: svcp10s35.f90  svcp6s9.f90  svcp8s15.f90  svcp8s17.f90
src/calcs/mecanica/: colisao.f90  correcao.f90
src/calcs/simulacao/: simulacao.f90  simulacao_sorteio.f90  simulacao_vi.f90  simulador.f90
src/libs/: aleatorio.f90  octree.f90  pyplot.f90  python.f90
src/libs/bh/: tree.f90
src/os/: windows.f90
src/python/: plot.py
src/socket/linux/: conexao.f90  server_mod.f90
src/socket/windows/: conexao.f90  server_mod.f90  wsa_mod.f90
strings/: strings.f90
testes/: auxiliares.f90  testes.f90
testes/presets/: vi_metodos_md.json  vi_metodos_mi.json  vi_ordem.json
